tests/rosetta/transpiler/Scala/casting-out-nines.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/casting-out-nines.scala:112: error: type mismatch;
 found   : scala.math.BigInt
 required: String
            val k = tc.getOrElse("kaprekar", null.asInstanceOf[Any]).asInstanceOf[Map[String,Any]](i)
                                                                                                   ^
one error found
